add GetFriendsByUsername and requests sent/received
