# openapi.yaml
@@ -391,16 +391,36 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
-  /friends/requests:
+  /friends/requests/sent:
     get:
       tags:
         - Friends
-      summary: Get all friend requests
-      description: Get all friend requests for a user.
-      operationId: getFriendRequests
+      summary: Get all sent friend requests
+      description: Get all sent friend requests for a user.
+      operationId: getSentFriendRequests
       responses:
         '200':
-          description: A list of friend requests
+          description: A list of sent friend requests
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FriendResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /friends/requests/received:
+    get:
+      tags:
+        - Friends
+      summary: Get all received friend requests
+      description: Get all received friend requests for a user.
+      operationId: getReceivedFriendRequests
+      responses:
+        '200':
+          description: A list of received friend requests
           content:
             application/json:
               schema:
